@@ -1,0 +1,96 @@
+
+# Overall: 10 total, 5 unique, 0.29 QPS, 53.14x concurrency ______________
+# Attribute          total     min     max     avg     95%  stddev  median
+# =========        ======= ======= ======= ======= ======= ======= =======
+# Exec time          1860s     10s    500s    186s    487s    217s     10s
+# Lock time              0       0       0       0       0       0       0
+# Rows sent              0       0       0       0       0       0       0
+# Rows exam              0       0       0       0       0       0       0
+# Time range        2010-06-24 11:48:00 to 2010-06-24 11:48:35
+# bytes                308      30      34   30.80   31.70    1.64   28.75
+
+# Profile
+# Rank Query ID           Response time    Calls R/Call   Item
+# ==== ================== ================ ===== ======== ============
+#    1 0x95AADD230F4EB56A  1000.0000 53.8%     2 500.0000 SELECT two
+#    2 0x5081E1858C60FD05   500.0000 26.9%     1 500.0000 SELECT three
+#    4 0x70E215C4BFED0080    50.0000  2.7%     5  10.0000 SELECT one
+# MISC 0xMISC               310.0000 16.7%     2 155.0000 <2 ITEMS>
+
+# Query 1: 2 QPS, 1.00kx concurrency, ID 0x95AADD230F4EB56A at byte 886 __
+# This item is included in the report because it matches --limit.
+# Attribute    pct   total     min     max     avg     95%  stddev  median
+# ========= ====== ======= ======= ======= ======= ======= ======= =======
+# Count         20       2
+# Exec time     53   1000s    500s    500s    500s    500s       0    500s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Time range 2010-06-24 11:48:34 to 2010-06-24 11:48:35
+# bytes         19      60      30      30      30      30       0      30
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+  ################################################################
+# Tables
+#    SHOW TABLE STATUS LIKE 'two'\G
+#    SHOW CREATE TABLE `two`\G
+# EXPLAIN
+SELECT two FROM two WHERE id=?\G
+
+# Query 2: 0 QPS, 0x concurrency, ID 0x5081E1858C60FD05 at byte 1013 _____
+# This item is included in the report because it matches --limit.
+# Attribute    pct   total     min     max     avg     95%  stddev  median
+# ========= ====== ======= ======= ======= ======= ======= ======= =======
+# Count         10       1
+# Exec time     26    500s    500s    500s    500s    500s       0    500s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Time range 2010-06-24 11:48:35 to 2010-06-24 11:48:35
+# bytes         11      34      34      34      34      34       0      34
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+  ################################################################
+# Tables
+#    SHOW TABLE STATUS LIKE 'three'\G
+#    SHOW CREATE TABLE `three`\G
+# EXPLAIN
+SELECT three FROM three WHERE id=?\G
+
+# Query 4: 1.25 QPS, 12.50x concurrency, ID 0x70E215C4BFED0080 at byte 633
+# This item is included in the report because it matches --outliers.
+# Attribute    pct   total     min     max     avg     95%  stddev  median
+# ========= ====== ======= ======= ======= ======= ======= ======= =======
+# Count         50       5
+# Exec time      2     50s     10s     10s     10s     10s       0     10s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Time range 2010-06-24 11:48:21 to 2010-06-24 11:48:25
+# bytes         48     150      30      30      30      30       0      30
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+  ################################################################
+# Tables
+#    SHOW TABLE STATUS LIKE 'one'\G
+#    SHOW CREATE TABLE `one`\G
+# EXPLAIN
+SELECT one FROM one WHERE id=?\G
